# releng-tool

./: .coveragerc  .dockerignore  .flake8  .gitattributes  .gitignore  .pylintrc  .travis.yml  CHANGELOG.md  CHANGELOG.rst  CONTRIBUTING  CONTRIBUTING.md  CONTRIBUTING.rst  LICENSE  MAINTAINERS.md  MANIFEST.in  README.md  README.rst  check  check-full  check-tests  check-tools  lint  pyproject.toml  requirements-tools.txt  requirements.txt  ruff.toml  setup.cfg  setup.py  tool-check  tox-coverage.ini  tox-legacy  tox-relaxed  tox-release.ini  tox.ini
.github/workflows/: build.yml  check-tools-py-flit.yml  check-tools-py-hatch.yml  check-tools-py-pdm.yml  check-tools-py-pep517.yml  check-tools-py-poetry.yml  check-tools-py-setuptools.yml  check-tools.yml  doc-update.yml  lint.yml  setup-waf.sh
Documentation/: README.md  annex-a.md  annex-a.rst  build  conf.py  contributor-guide.md  contributor-guide.rst  developer-guide.rst  examples.md  examples.rst  help.md  help.rst  index.rst  install.md  install.rst  release-notes.rst  releng-tool.1  requirements.md  requirements.rst  tips.rst  user-guide.rst
Documentation/_static/: theme_overrides.css
Documentation/_templates/: layout.html
Documentation/developer-guide/: actually-getting-started  environment  getting-started  other  packages  packages-ascii-armor  packages-build-defs  packages-build-defs-example-default  packages-build-defs-example-dentry  packages-conf-defs  packages-conf-defs-example-default  packages-conf-defs-example-dentry  packages-conf-env  packages-conf-opts  packages-hashes  packages-install-defs  packages-install-defs-example-default  packages-install-defs-example-dentry  packages-sites  packages-type-autotools  packages-type-cmake  packages-type-make  packages-type-meson  packages-type-python  packages-type-scons  packages-type-script  prelude  releng-py
Documentation/include/: pkg-build-defs  pkg-build-env  pkg-build-opts  pkg-conf-defs  pkg-conf-env  pkg-conf-opts  pkg-install-defs  pkg-install-env  pkg-install-opts
Documentation/news/: 2021-12-31_00.10.00.md  2022-02-26_00.11.00.md  2022-05-02_00.12.00.md  2022-08-10_00.13.00.md  2023-02-05_00.14.00.md  2023-02-12_00.15.00.md  2023-05-07_00.16.00.md
Documentation/user-guide/: advanced  arguments  getting-started  rebuilds  tips
debian/: .gitignore  changelog  control  copyright  manpages  rules  watch
debian/metadata/: metadata
debian/tests/: control  tool-tests  unit-tests
releng/: README  __init__.py  __main__.py  defs.py  opts.py  packages.py  registry.py
releng-tool/: __main__.py
releng/api/: __init__.py
releng/engine/: __init__.py  bootstrap.py  build.py  configure.py  extract.py  fetch.py  install.py  post.py
releng/extract/: archive.py  git.py  mercurial.py
releng/fetch/: cvs.py  git.py  mercurial.py  url.py
releng/tool/: __init__.py  autoreconf.py  bzr.py  cmake.py  cvs.py  git.py  hg.py  python.py  tar.py
releng/util/: env.py  file_flags.py  hash.py  io.py  log.py  platform.py  sort.py  string.py
releng_tool/: __init__.py  __main__.py  apimode.py  defs.py  exceptions.py  opts.py  packages.py  prerequisites.py  registry.py  stats.py  support.py
releng_tool/api/: __init__.py
releng_tool/engine/: __init__.py  bootstrap.py  build.py  configure.py  extract.py  fetch.py  fetch_post.py  init.py  install.py  license.py  lint.py  patch.py  post.py  printpkgs.py  printvars.py  sbom.py  script_env.py  suggest.py  vsdevcmd.py
releng_tool/extract/: archive.py  git.py  mercurial.py
releng_tool/fetch/: brz.py  bzr.py  cvs.py  file.py  git.py  lore.py  mercurial.py  perforce.py  rsync.py  scp.py  svn.py  url.py
releng_tool/lint/: __init__.py  rt100.py  rt101.py  rt102.py  rt103.py  rt104.py  rt105.py  rt106.py  rt107.py  rt108.py  rt109.py  rt110.py  rt111.py  rt112.py  rt113.py  rt114.py  rt115.py  rt116.py
releng_tool/tool/: __init__.py  autoreconf.py  brz.py  bzr.py  cargo.py  cmake.py  cvs.py  git.py  gpg.py  hg.py  lore.py  make.py  meson.py  patch.py  python.py  rsync.py  scons.py  scp.py  svn.py  tar.py  vswhere.py  waf.py  xmake.py
releng_tool/util/: __init__.py  api.py  compat.py  critical.py  enum.py  env.py  file_flags.py  hash.py  interpret.py  io.py  io_cat.py  io_copy.py  io_exists.py  io_ls.py  io_mkdir.py  io_move.py  io_opt_file.py  io_path.py  io_remove.py  io_step.py  io_symlink.py  io_tar.py  io_temp_dir.py  io_touch.py  io_wd.py  log.py  network_isolation.py  path.py  platform.py  runner.py  sort.py  spdx.py  strccenum.py  string.py  version.py  win32.py
scripts/: .gitattributes  patch-legacy-venv.py  release-preparation-tasks.sh  release-publish-tasks.sh  releng-tool-completion  spdx-license-data.ini  task-coverage-container.sh  task-coverage.sh  task-full-check-container.sh  task-full-check.sh  task-release-prepare.sh  task-release-publish.sh  tox-cifs-workdir.sh  tox-legacy.sh  update-spdx-license-data.py
scripts/completion/: bash  fish  zsh
scripts/lib/: release-preparation-tasks.sh  release-publish-tasks.sh
support/: debian-pkg-Dockerfile
support/test-container/: Dockerfile  Dockerfile-py27  Dockerfile-py310  Dockerfile-py311  Dockerfile-py312  Dockerfile-py313  Dockerfile-py314  Dockerfile-py34  Dockerfile-py35  Dockerfile-py36  Dockerfile-py37  Dockerfile-py38  Dockerfile-py39  launch  ubuntu-deps
support/verify-installs/: Dockerfile-alpine-root  Dockerfile-alpine-user  Dockerfile-archlinux-root  Dockerfile-archlinux-user  Dockerfile-debian-root  Dockerfile-debian-user  Dockerfile-fedora-root  Dockerfile-fedora-user  Dockerfile-opensuse-root  Dockerfile-opensuse-user  Dockerfile-ubuntu-root  Dockerfile-ubuntu-user  build-check.sh  docker-compose.yml
test/: .gitignore  __init__.py  __main__.py
test/unit-tests/: __init__.py  test_file_flags.py  test_util_env.py  test_util_hash.py  test_util_io.py  test_util_sort.py  test_util_string.py
tests/: __init__.py  __main__.py
tests/templates/cmake/package/lib/local/: CMakeLists.txt  example-module-helper.cmake
tests/templates/cmake/package/test/local/: CMakeLists.txt
tests/templates/meson/package/test/local/: meson.build
(+956 files in other folders)
