[build-system]
requires = [
    'setuptools >=61',
    # The project configuration aims to include a `license` entry with a
    # SPDX identifier in the future; however, support for this requires
    # setuptools>=75.6. We are still trying to be build-compatible with
    # some environments which stable version is an older version of setuptools
    # (e.g. Debian's stable uses v66.1.1).
    # 'setuptools >=75.6',
]
build-backend = 'setuptools.build_meta'

[project]
name = 'releng-tool'
description = 'A tool to manage the building of packages'
authors = [
    {name = 'releng-tool', email = 'releng@releng.io'},
]
requires-python = '>=3.10'
readme = 'README.md'
# (future: see setuptools requirement above)
# license = 'BSD-2-Clause'
classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Environment :: Console',
    'Operating System :: OS Independent',
    'Programming Language :: Python :: 3 :: Only',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
    'Programming Language :: Python :: 3.14',
    'Topic :: Software Development',
    'Topic :: Software Development :: Build Tools',
]
dynamic = [
    'version',
]

[project.urls]
Homepage = 'https://releng.io'
Documentation = 'https://docs.releng.io'
Source = 'https://github.com/releng-tool/releng-tool'

[project.scripts]
releng-tool = 'releng_tool.__main__:main'

[project.optional-dependencies]
meson = [
    'meson',
]
py-base = [
    'build',
    'installer>=0.5.0',
]
py-flit = [
    'flit',
    'releng-tool[py-base]',
]
py-hatch = [
    'hatch',
    'releng-tool[py-base]',
]
py-pdm = [
    'pdm',
    'pdm-backend',
    'pdm-pep517',
    'releng-tool[py-base]',
]
py-poetry  = [
    'poetry>=0.8',
    'releng-tool[py-base]',
]
py-setuptools = [
    'releng-tool[py-base]',
    'setuptools',
    'wheel',
]
py-all = [
    'releng-tool[py-base]',
    'releng-tool[py-flit]',
    'releng-tool[py-hatch]',
    'releng-tool[py-pdm]',
    'releng-tool[py-poetry]',
    'releng-tool[py-setuptools]',
]
scons = [
    'scons',
]
statistics = [
    'matplotlib',
]
all = [
    'releng-tool[meson]',
    'releng-tool[py-all]',
    'releng-tool[scons]',
    'releng-tool[statistics]',
]

[tool.setuptools.packages.find]
include = [
    'releng-tool*',
    'releng_tool*',
]
namespaces = false
where = ['.']

[tool.setuptools.dynamic]
version = {attr = 'releng_tool.__version__'}
