[metadata]
author = releng-tool
author_email = releng@releng.io
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Software Development
    Topic :: Software Development :: Build Tools
description = release engineering utility tool
long_description = file: README.rst
license = BSD-2-Clause
license_file = LICENSE
name = releng-tool
platforms = any
url = https://releng.io
version = attr: releng_tool.__version__

[bdist_wheel]
# build a universal wheel (Python 2 and 3 supported)
universal=1

[sdist]
owner = root
group = root

[coverage:run]
parallel = 1
source = releng_tool

[coverage:report]
ignore_errors = 1
omit =
    # ignore tox
    .tox/*
    # ignore api interface
    releng_tool/api/__init__.py
    # ignore deprecated namespace
    releng/*
    # ignore mainlines
    *__main__.py*
show_missing = 1
skip_covered = 1

[flake8]
ignore =
    E123
    E128
    E221
    E261
    E301
    E302
    E305
    E306
    W503
    W504
max-line-length = 80

[pylint]
disable =
    C,
    E1133,
    E1135,
    R,
    W,

[options]
packages = find:
test_suite = tests
zip_safe = False

[options.entry_points]
console_scripts =
    releng-tool = releng_tool.__main__:main

[options.extras_require]
statistics =
    matplotlib

[options.packages.find]
exclude =
    tests*
