[metadata]
name = releng-tool
version = attr: releng_tool.__version__

[bdist_wheel]
# build a universal wheel (Python 2 and 3 supported)
universal=1

[sdist]
owner = root
group = root

[options]
packages = find:
test_suite = tests
include_package_data = True

[options.entry_points]
console_scripts =
    releng-tool = releng_tool.__main__:main

[options.packages.find]
exclude =
    tests*
